--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <i class="fa fa-envelope my-pesan"></i>
 </a>
 
-<nav class="navbar fixed-top">
+<nav class="navbar container fixed-top">
   <div class="container-fluid" style="color:white">
     <div class="position-absolute top-0 start-50 translate-middle-x">
       <img src="assets/img/mb.png" alt="Movie Box" class="mylogo">
@@ -159,7 +159,7 @@
   </div>
 </div>
 
-<nav class="navbar fixed-bottom bg-light" style="height:94px">
+<nav class="navbar container fixed-bottom bg-light" style="height:94px">
   <div id="iklan">
     <div id="ad"></div>
   </div>
