--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   </div>
 </div>
 
-<div class="offcanvas offcanvas-bottom" tabindex="-1" id="request" aria-labelledby="requestLabel" style="height:260px">
+<div class="offcanvas container offcanvas-bottom" tabindex="-1" id="request" aria-labelledby="requestLabel" style="height:260px">
   <div class="offcanvas-header">
     <h5 class="offcanvas-title" id="offcanvasBottomLabel">Lapor Link Rusak</h5>
     <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
