--- a/index.html
+++ b/index.html
@@ -70,15 +70,17 @@
   <i class="fa fa-envelope my-pesan"></i>
 </a>
 
-<nav class="navbar container fixed-top">
+<nav class="navbar fixed-top">
   <div class="container-fluid" style="color:white">
     <div class="position-absolute top-0 start-50 translate-middle-x">
       <img src="assets/img/mb.png" alt="Movie Box" class="mylogo">
     </div>
   </div>
+  <button type="button" data-bs-toggle="modal" data-bs-target="#inifilm" class="navbar-toggler border-0" style="font-size:1.2em;color:#fff;margin-top:-5px" onclick="ad()">
+    </button>
 </nav>
 
-<div class="container">
+<div class="container align:center">
   <img class="img-fluid" src="assets/img/ads.gif" onclick="ads()">
 </div>
 
@@ -95,11 +97,23 @@
   		<form style="margin-right:5px">
   			<div class="form-group">
   				<select data-filter="kategori" class="filter-kategori filter form-control form-select" style="border:none;text-align:right;margin-top:15px">
-  				  <option value="">Filter</option>
   				</select>
   			</div>
   		</form>
   	</div>
+  </div>
+  <div class="container" style="margin-top:-8px;color:black">
+    <div class="blocks blocks--horizontal mt-1 mb-0" id="menu" style="margin-left:-15px">
+    <div class="block"><a href="https://ruangmovie.github.io/sexclips.html" onclick="ads()"><img src="assets/img/clips.png" alt="" class="block__image" /><h5 class="block__title">Sex Clips</h5></a></div>
+    <div class="block"><a href="https://ruangmovie.github.io/bokep.html" onclick="ads()"><img src="assets/img/bokep.png" alt="" class="block__image" /><h5 class="block__title">Bokep Viral</h5></a></div>
+    <div class="block"><a href="https://ruangmovie.github.io/bugil.html" onclick="ads()"><img src="assets/img/bugil.png" alt="" class="block__image" /><h5 class="block__title">Pap Bugil</h5></a></div>
+    <div class="block"><a href="https://ruangmovie.github.io/semi.html" onclick="ads()"><img src="assets/img/semi.png" alt="" class="block__image" /><h5 class="block__title">Film Semi</h5></a></div>
+    <div class="block"><a href="https://ruangmovie.github.io/komik.html" onclick="ads()"><img src="assets/img/komik.png" alt="" class="block__image" /><h5 class="block__title">Komik ++</h5></a></div>
+    <div class="block"><a href="https://ruangmovie.github.io/desah.html" onclick="ads()"><img src="assets/img/desah.png" alt="" class="block__image" /><h5 class="block__title">Desahan</h5></a></div>
+    <div class="block"><a href="https://ruangmovie.github.io/cersex.html" onclick="ads()"><img src="assets/img/cersex.png" alt="" class="block__image" /><h5 class="block__title">Cerita Sex</h5></a></div>
+    <div class="block"><a href="https://ruangmovie.github.io/sexy.html" onclick="ads()"><img src="assets/img/cewek.png" alt="" class="block__image" /><h5 class="block__title">Sexy Girls</h5></a></div>
+    <div class="block"><a href="https://ruangmovie.github.io/apk.html" onclick="ads()"><img src="assets/img/apps.png" alt="" class="block__image" /><h5 class="block__title">Apk Hot</h5></a></div>
+    </div>
   </div>
   <div class="container" style="margin-top:-15px">
     <div class="row" id="list-movie">
