--- a/index.html
+++ b/index.html
@@ -70,39 +70,25 @@
   <i class="fa fa-envelope my-pesan"></i>
 </a>
 
-<nav class="navbar fixed-top">
+<nav class="container navbar fixed-top">
   <div class="container-fluid" style="color:white">
-    <div class="position-absolute top-0 start-50 translate-middle-x">
+    <div class="position-absolute top-0 start-0">
       <img src="assets/img/mb.png" alt="Movie Box" class="mylogo">
     </div>
   </div>
-  <button type="button" data-bs-toggle="modal" data-bs-target="#inifilm" class="navbar-toggler border-0" style="font-size:1.2em;color:#fff;margin-top:-5px" onclick="ad()">
-    </button>
+  <a href="#" class="filter"></a>
 </nav>
 
-<div class="container align:center">
-  <img class="img-fluid" src="assets/img/ads.gif" onclick="ads()">
-</div>
-
 <div class="container mb-4" style="padding:5px">
-	<div class="row mb-4">
-    <div class="col-8">
-      <form id="search-form" action="" method="POST" enctype="multipart/form-data">
-    		<div class="form-group" style="margin-left:5px;margin-top:15px">
-    			<input class="form-control" type="text" placeholder="Pencarian" id="search-movie"/>
-    		</div>
-    	</form>
-		</div>
-		<div class="col-4" id="filter">
-  		<form style="margin-right:5px">
-  			<div class="form-group">
-  				<select data-filter="kategori" class="filter-kategori filter form-control form-select" style="border:none;text-align:right;margin-top:15px">
-  				</select>
-  			</div>
-  		</form>
-  	</div>
-  </div>
-  <div class="container" style="margin-top:-8px;color:black">
+	<div class="col-4" id="filter">
+		<form style="margin-right:5px">
+			<div class="form-group">
+				<select data-filter="kategori" class="filter-kategori filter form-control form-select" style="border:none;text-align:right;margin-top:15px">
+				</select>
+			</div>
+		</form>
+	</div>
+  <div class="container" style="margin-top:-20px;color:black">
     <div class="blocks blocks--horizontal mt-1 mb-0" id="menu" style="margin-left:-15px">
     <div class="block"><a href="https://ruangmovie.github.io/sexclips.html" onclick="ads()"><img src="assets/img/clips.png" alt="" class="block__image" /><h5 class="block__title">Sex Clips</h5></a></div>
     <div class="block"><a href="https://ruangmovie.github.io/bokep.html" onclick="ads()"><img src="assets/img/bokep.png" alt="" class="block__image" /><h5 class="block__title">Bokep Viral</h5></a></div>
