--- a/index.html
+++ b/index.html
@@ -72,22 +72,13 @@
 
 <nav class="container navbar fixed-top">
   <div class="container-fluid" style="color:white">
-    <div class="position-absolute top-0 start-0">
+    <div class="position-absolute top-0 start-50 translate-middle-x">
       <img src="assets/img/mb.png" alt="Movie Box" class="mylogo">
     </div>
   </div>
-  <a href="#" class="filter"></a>
 </nav>
 
 <div class="container mb-4" style="padding:5px">
-	<div class="col-4" id="filter">
-		<form style="margin-right:5px">
-			<div class="form-group">
-				<select data-filter="kategori" class="filter-kategori filter form-control form-select" style="border:none;text-align:right;margin-top:15px">
-				</select>
-			</div>
-		</form>
-	</div>
   <div class="container" style="margin-top:-15px;color:black">
     <div class="blocks blocks--horizontal mt-1 mb-0" id="menu" style="margin-left:-15px">
     <div class="block"><a href="https://ruangmovie.github.io/sexclips.html" onclick="ads()"><img src="assets/img/clips.png" alt="" class="block__image" /><h5 class="block__title">Sex Clips</h5></a></div>
